[package]
name = "cfspeedtest-lib-async"
version = "1.2.6"
edition = "2021"
license = "MIT"
description = "Unofficial CLI for speed.cloudflare.com"
readme = "README.md"
repository = "https://github.com/code-inflation/cfspeedtest/"
keywords = ["cli", "speedtest", "speed-test", "cloudflare"]
categories = ["command-line-utilities"]
exclude = [".github/"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }